[gd_scene load_steps=2 format=3 uid="uid://bq8i6fb3wwtcv"]

[ext_resource type="Script" uid="uid://bw1v2k8pl8l3f" path="res://flapbird/flapbird.gd" id="1_42dfj"]

[node name="Flapbird" type="Node2D"]
script = ExtResource("1_42dfj")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="Node" parent="."]

[node name="UI_Game_On" type="CanvasLayer" parent="UI"]

[node name="HBoxContainer" type="HBoxContainer" parent="UI/UI_Game_On"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -576.0
offset_bottom = 23.0
grow_horizontal = 0
alignment = 2

[node name="ScoreLabel" type="Label" parent="UI/UI_Game_On/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"

[node name="UI_Game_Over" type="CanvasLayer" parent="UI"]
process_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/UI_Game_Over"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -38.5
offset_right = 43.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/UI_Game_Over/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="GameOverLabel" type="Label" parent="UI/UI_Game_Over/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/UI_Game_Over/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Score"
horizontal_alignment = 1

[node name="BestScoreLabel" type="Label" parent="UI/UI_Game_Over/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Best"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/UI_Game_Over/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ReplayButton" type="Button" parent="UI/UI_Game_Over/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "REPLAY"
